--- a/download-v2.html
+++ b/download-v2.html
@@ -19,7 +19,7 @@
   <link href="css/modern-business.css" rel="stylesheet">
 
   <style>
-  h4{text-align:center;}
+  h5{text-align:center;}
 </style>
 
 </head>
@@ -123,7 +123,7 @@
       <!-- Linux -->
       <div class="jumbotron">
 
-        <h4>Download TerraMA²</h4><br><br>
+        <h5> Release 4.0 - RC2  | disponível (25/08/2017)</h5><br>
 
         <div class="container">
           <div class="col-md-auto">
@@ -136,7 +136,11 @@
                       <img src="img/win-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70">
                     </div>
                     <div class="col">
-                      <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70">
+                      <!-- <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70"> -->
+                      <ul>
+                        <li>Versão Recomendada: <a href="">A </a></li>
+                        <li>Versão Corrente: <a href="">B</a> </li>
+                      </ul>
                     </div>
                     <!-- <div class="col-sm">
                       <img src="img/pdf-icon.png" class="rounded mx-auto d-block" alt="...">
@@ -160,8 +164,39 @@
             </div>
           </div>
         </div> -->
-      </div>
+      </div><br><br>
 
+      <div class="container">
+          <div class="col-md-auto">
+            <div class="card">
+              <div class="card-body">
+
+                <div class="container">
+                  <div class="row">
+                    <div class="col">
+                      <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70">
+                    </div>
+                    <div class="col">
+                      <!-- <img src="img/linux-icon.png" class="rounded mx-auto d-block" alt="..." width="100" height="70"> -->
+                      <ul>
+                        <li>Versão Recomendada: <a href="">X </a></li>
+                        <li>Versão Corrente: <a href="">Y</a> </li>
+                      </ul>
+                    </div>
+                    <!-- <div class="col-sm">
+                      <img src="img/pdf-icon.png" class="rounded mx-auto d-block" alt="...">
+                    </div> -->
+                  </div>
+                </div>
+
+                <!-- <h4 class="card-title">Special title treatment</h4>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
 
 
