--- a/presentation.html
+++ b/presentation.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/49020"/>
 
-  <title>TerraMA² · Apresentação</title>
+  <title>TerraMA² · Apresentações</title>
   <link href="img/terrama2_logo_100dpi.png" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 
   <!-- Bootstrap core CSS -->
@@ -104,7 +104,7 @@
       <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
-        <h1 class="mt-4 mb-3">Apresentação
+        <h1 class="mt-4 mb-3">Apresentações
           <small>TerraMA²</small>
         </h1>
 
@@ -112,10 +112,10 @@
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item active">Apresentação</li>
+          <li class="breadcrumb-item active">Apresentações</li>
         </ol>
 
-        <h4>Apresentação</h4>
+        <h4>Apresentações</h4>
         
         <div class="bs-callout bs-callout-warning">
 
@@ -135,78 +135,81 @@
       <!-- Footer -->
 
       <footer class="mainfooter">
-        <div class="footer-top p-y-2">
-          <div class="container-fluid">
+    <div class="footer-top p-y-2">
+      <div class="container-fluid">
 
+      </div>
+    </div>
+    <div class="footer-middle">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-6 col-md-4">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Sobre</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="about.html">TerraMA²</a></li>
+                <li><a href="team.html">Equipe</a></li>
+                <li><a href="architecture.html">Arquitetura</a></li>
+                <li><a href="contact.html">Contato</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="footer-middle">
-          <div class="container">
-            <div class="row">
+          <div class="col-6 col-md-4">
+            <!--Column1-->
+            <div class="footer-pad">
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="projects.html">Projetos</a></li>
+                <li><a href="download.html">Download</a></li>
+                <!-- <li><a href="documentation.html">Documentação</a></li> -->
+                <li><a href="courses.html">Cursos</a></li>
+              </ul>
+            </div>
 
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Sobre</h4>
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="about.html">TerraMA²</a></li>
-                    <li><a href="team.html">Equipe</a></li>
-                    <li><a href="architecture.html">Arquitetura</a></li>
-                    <li><a href="contact.html">Contato</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Projetos</h4>
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="projects.html">Projetos</a></li>
-                    <li><a href="#" data-toggle="tooltip" data-placement="left" title="Em Breve!">Estudos de Caso</a></li>
-                  </ul>
-                </div>
-
-                <div class="footer-pad">
-                  <ul class="list-unstyled">
-                    <li><a href="#"></a></li>
-                    <li><a href="download.html">Download</a></li>
-                    <li><a href="documentation.html">Documentação</a></li>
-                    <li><a href="courses.html">Cursos</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-6 col-md-4">
-                <!--Column1-->
-                <div class="footer-pad">
-                  <h4>Endereço</h4>
-
-                  <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
-                </div>
-                <div class="footer-pad">
-                  <div class="mx-auto" style="width: 200px;">
-                    <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
-                  </div>
-                </div>
-              </div>
-            </div> 
+            <div class="footer-pad">
+              <h4>Documentação</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"></a></li>
+                <li><a href="presentation.html">Apresentações</a></li>
+                <li><a href="guide.html">Manuais</a></li>
+                <li><a href="publications.html">Publicações</a></li>
+                <li><a href="#">Videos</a></li>
+              </ul>
+            </div>
+            
           </div>
+          <div class="col-6 col-md-4">
+            <!--Column1-->
+            <div class="footer-pad">
+              <h4>Endereço</h4>
 
-        </div>
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-12">
-                <!--Footer Bottom-->
-                <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
-
+              <p>Avenida dos Astronautas, 1.758 Jardim da Granja CEP: 12227 010 São José dos Campos - SP</p>
+            </div>
+            <div class="footer-pad">
+              <div class="mx-auto" style="width: 200px;">
+                <a href="http://www.inpe.br/" target="_blank"><img src="img/logo-inpe.png" width="50" height="40" class="rounded mx-auto d-block" alt="Logotipo do INPE"></a>
               </div>
             </div>
           </div>
+        </div> 
+      </div>
+
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <!--Footer Bottom-->
+            <p>&copy; Copyright 2017 TerraMA².  All rights reserved.</p>
+          </div>
         </div>
-      </footer>
-      <!-- /.Footer -->
+      </div>
+    </div>
+  </footer>
+  <!-- /.Footer -->
 
       <!-- Gov -->
       <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
